src/App.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  transition: 200ms all linear;
  outline: none;
}

.disable-select {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.disable-select::selection {
  background: #00000000;
}

::selection {
  color: white;
  background: var(--secondaryColor);
}

.container {
  min-width: 200px;
  width: 100vw;
  overflow: hidden;
  height: 100vh;
  max-width: 1920px;
  background-color: var(--primaryColor);
  margin: 0 auto;
}

.page {
  height: 100%;
}

.btn {
  background: none;
  color: var(--tertiaryColor);
  padding: 1rem;
  border: none;
  cursor: pointer;
  font-size: 1rem;
}

.btn:hover {
  color: var(--secondaryColor);
}

.btn:active {
  color: var(--tertiaryColor);
  background-color: var(--secondaryColor);
}

.btn-transparent {
  background: none;
}

:root {
  --primaryColor: #ffffff;
  --secondaryColor: #5f7aff;
  --lighterSecondaryColor: #5f7aff20;
  --tertiaryColor: #000000;
  --fontOne: "Roboto Mono", monospace;
  --fontTwo: "Crete Round", serif;
}

